fix: ensure consistent height and overflow behavior for documents and articles sections

--- a/src/app/modules/empresas/pages/details/details.page.component.scss
+++ b/src/app/modules/empresas/pages/details/details.page.component.scss
@@ -22,4 +22,10 @@
 		grid-row: 2/3;
 		grid-column: 2/3;
 	}
+
+	.documents,
+	.articles {
+		height: 100%;
+		overflow-y: auto;
+	}
 }
